--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "e-commerce-front-end",
   "version": "0.1.0",
+  "main": "index.js",
   "private": true,
   "type": "module",
   "scripts": {
