--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "e-commerce-talent-camp",
   "version": "1.0.0",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install && cd api && npm install && cd ../app && npm install",
+    "build": "cd api && npm run build",
+    "start": "cd api && npm run start"
   },
   "repository": {
     "type": "git",
