--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
       - name: app testing
         run: cd app && npm run test
       - name: Heroku deploy
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message,'#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
@@ -55,3 +55,16 @@ jobs:
           heroku_email: ${{ secrets.HEROKU_API_EMAIL }}
           healthcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
+  tag_release:
+    if: ${{ github.event_name != 'pull_request' && !contains(github.event.head_commit.message,'#skip') }}
+    needs: [test_and_deploy]
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: '0'
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        DEFAULT_BUMP: "#patch"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
