--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
   test_and_deploy:
     runs-on: ubuntu-20.04
     env:
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
       MYSQL_DEVELOPMENT_USER: root
       MYSQL_DEVELOPMENT_PASSWORD: ${{ secrets.ROOTPASSWORD }}
       MYSQL_DEVELOPMENT_HOST: 127.0.0.1
