--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce-back-end",
+  "name": "ntt-bookstore-back-end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
