--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "prepare": "cd api && npm install && cd ../app && npm install",
     "build": "cd api && npm run build",
-    "start": "cd api && npm run start"
+    "start": "cd api && npm run start",
+    "dev" : "cd api && npm run resetDevDb && npm run dev"
   },
   "repository": {
     "type": "git",
